Refactor `NtadExplorerWrapper` and related classes for flexible `DataModel` support:
- Replaced `DataSet` with `DataModel` in `NtadExplorerWrapper`, enabling broader compatibility with different data types.
- Updated `listRankDeficientNtads` in `NtadExplorer` to use `CorrelationMatrix` for computations.
- Adjusted `NtadExplorerHarness` to construct `CorrelationMatrix` instances before invoking `NtadExplorer`.
- Refined related types and method calls in `NtadExplorerEditor` and utility classes.